--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
-*bin/*
-*obj/*
+NetworkingLibrary/bin/*
+NetworkingLibrary/bin/Debug*
+NetworkingLibrary/bin/Release*
+NetworkingLibrary/obj/*
 *.v11.suo
